<?xml version="1.0"?>
<package format="3">
  <name>b_global_path_planner</name>
  <version>0.0.0</version>
  <description>The b_global_path_planner package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
