<?xml version="1.0"?>
<package format="3">
  <name>b_local_path_planner</name>
  <version>0.0.0</version>
  <description>The b_local_path_planner package</description>
  <maintainer email="amsl@todo.todo">user</maintainer>
  <license>todo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roomba_500driver_meiji</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
